--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,6 @@ project(ppocr CXX)
 cmake_minimum_required(VERSION 3.14)
 
 set(DEMO_NAME "ppocr")
-
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
 
@@ -45,7 +44,7 @@ endif()
 if (WIN32)
   include_directories("${PADDLE_LIB}/paddle/include")
   link_directories("${PADDLE_LIB}/paddle/lib")
-  find_package(OpenCV REQUIRED PATHS ${OPENCV_DIR}/build/ NO_DEFAULT_PATH)
+  find_package(OpenCV REQUIRED PATHS ${OPENCV_DIR}/ NO_DEFAULT_PATH)
   if(USE_FREETYPE)
     if(NOT "opencv_freetype" IN_LIST OpenCV_LIBS)
       message(FATAL_ERROR "OpenCV was not compiled with the freetype module (opencv_freetype) !")
@@ -54,9 +53,8 @@ if (WIN32)
   endif()  
 
 else ()
-
-  set(OpenCV_DIR "/workspace/cpp_infer_refactor/third_party/opencv-4.7.0/opencv4/lib64/cmake/opencv4")
-  find_package(OpenCV REQUIRED )
+  set(OpenCV_DIR "${OPENCV_DIR}/opencv4/lib64/cmake/opencv4") #*****
+  find_package(OpenCV REQUIRED)
   if(USE_FREETYPE)
     if(NOT "opencv_freetype" IN_LIST OpenCV_LIBS)
       message(FATAL_ERROR "OpenCV was not compiled with the freetype module (opencv_freetype) !")
@@ -120,8 +118,7 @@ include_directories("${PADDLE_LIB}/third_party/install/openvino/include")
 include_directories("${PADDLE_LIB}/third_party/install/tbb/include")
 include_directories("${PADDLE_LIB}/third_party/boost")
 include_directories("${PADDLE_LIB}/third_party/eigen3")
-include_directories("third_party/yaml-cpp/include")
-
+include_directories("${PADDLE_LIB}/paddle/include/") 
 include_directories("${CMAKE_SOURCE_DIR}/")
 
 link_directories("${PADDLE_LIB}/third_party/install/zlib/lib")
@@ -135,7 +132,6 @@ link_directories("${PADDLE_LIB}/third_party/install/yaml-cpp/lib")
 link_directories("${PADDLE_LIB}/third_party/install/openvino/intel64")
 link_directories("${PADDLE_LIB}/third_party/install/tbb/lib")
 link_directories("${PADDLE_LIB}/paddle/lib")
-link_directories("third_party/yaml-cpp/lib")
 
 if(WITH_MKL)
   include_directories("${PADDLE_LIB}/third_party/install/mklml/include")
@@ -229,19 +225,40 @@ if (NOT WIN32)
     set(DEPS ${DEPS} ${EXTERNAL_LIB})
 endif()
 
+set(THIRD_PARTY_PATH ${CMAKE_CURRENT_LIST_DIR}/third_party)
+function(download_and_decompress url filename decompress_dir)
+  if(NOT EXISTS "${filename}" AND NOT EXISTS "${decompress_dir}")
+    message("Downloading file from ${url} to ${filename} ...")
+    file(DOWNLOAD ${url} "${filename}.tmp" SHOW_PROGRESS)
+    file(RENAME "${filename}.tmp" ${filename})
+  endif()
+  if(NOT EXISTS ${decompress_dir})
+    file(MAKE_DIRECTORY ${decompress_dir})
+    message("Decompress file ${filename} ...")
+    execute_process(COMMAND ${CMAKE_COMMAND} -E tar -xf ${filename} WORKING_DIRECTORY ${decompress_dir})
+  endif()
+endfunction()
+
+
+set(PACKAGE_LIST abseil-cpp clipper_ver6.4.2 nlohmann)
+foreach(PKG ${PACKAGE_LIST})
+    set(PKG_URL "https://paddle-model-ecology.bj.bcebos.com/paddlex/cpp/libs/${PKG}.tgz")
+    set(PKG_TGZ_PATH "${CMAKE_CURRENT_BINARY_DIR}/${PKG}.tgz")
+    set(PKG_DST_PATH "${THIRD_PARTY_PATH}/${PKG}")
+    download_and_decompress(${PKG_URL} ${PKG_TGZ_PATH} ${PKG_DST_PATH})
+endforeach()
+
+add_subdirectory(third_party/abseil-cpp)
+add_subdirectory(third_party/clipper_ver6.4.2/cpp)
+include_directories(${POLYCLIPPING_INCLUDE_DIR})
+
 set(DEPS ${DEPS} ${OpenCV_LIBS})
-
-# add_subdirectory(third_party/abseil-cpp)
-# add_subdirectory(third_party/clipper_ver6.4.2/cpp)
-# include_directories(${POLYCLIPPING_INCLUDE_DIR})
-
 set(DEPS ${DEPS} absl::statusor)
 set(DEPS ${DEPS} polyclipping)
-find_package(absl REQUIRED)
+
 if(UNIX)
   find_package(Iconv REQUIRED) 
 endif()
-set(DEPS ${DEPS} absl::statusor)
 
 file(GLOB_RECURSE SRC_LIST "./src/*.cc")
 set(SRCS pipeline_ocr.cc )
